# SimpleTrace

./: .gitignore  pyproject.toml
examples/: test.py  test.sh
simpletrace/: __init__.py  collate_decorator.py  config.py  dataset_decorator.py  default_decorator.py  fetcher_decorator.py  io_decorator.py  iterator_decorator.py  loop_manager.py  pinmemory_hooks.py  profile.py  profile_enable.py  runtime_state.py  trace_type.py  tracer.py
